--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -5,3 +5,7 @@ body
 a
   color: #00B7FF
   border-bottom: 1px solid red
+  
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak
+  display: none !important
+
