User Auth and minor updates

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,11 +1,2 @@
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-
-a
-  color: #00B7FF
-  border-bottom: 1px solid red
-  
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak
-  display: none !important
-
+  padding-top: 70px
