--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,4 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
-
-a {
-  color: #00B7FF;
-  border-bottom: 1px solid red; }
-
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-  display: none !important; }
+  padding-top: 70px; }
 
 /*# sourceMappingURL=style.css.map */
