--- a/views/auth.jade
+++ b/views/auth.jade
@@ -1,5 +1,8 @@
 extends ./index.jade
 
+block title
+	title #{title} - Monthly Income Management
+
 block content
 	.col-md-9.col-md-offset-3
 	h1.text-center= title
