--- a/views/index.jade
+++ b/views/index.jade
@@ -7,11 +7,12 @@ html
 			meta(name="description",content="Manage your expenditures, and remove them from your monthly activities! Follow all advices from our platform for a better result.")
 			meta(name="og:description",content="Manage your expenditures, and remove them from your monthly activities! Follow all advices from our platform for a better result.")
 			meta(property="og:site_name",content="Monthly Income Management")
-			meta(property="og:image",content="/images/monthly-income.png")
+			meta(property="og:image",content="https://monthly-income.herokuapp.com/images/monthly-income.png")
 			meta(name="twitter:description",content="Manage your expenditures, and remove them from your monthly activities! Follow all advices from our platform for a better result.")
 			meta(name="twitter:title",content="Monthly Income Management")
-			meta(name="twitter:image",content="/images/monthly-income.png")
-		meta(name="viewport",content="width=device-width, initial-scale=1.0, user-scalable=no")
+			meta(name="twitter:card",content="summary_large_image")
+			meta(name="twitter:image",content="https://monthly-income.herokuapp.com/images/monthly-income.png")
+		meta(name="viewport",content="width=device-width,initial-scale=1.0,user-scalable=no")
 		meta(name="google-site-verification",content="8jtKltD6T2ns2fyRMuP1DEhvMenwOuJUupv0Z-_KqPo")
 		link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet", integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==", crossorigin="anonymous")
 		link(rel='stylesheet',href='/stylesheets/style.css')
