--- a/views/index.jade
+++ b/views/index.jade
@@ -14,8 +14,6 @@ html
 			meta(name="twitter:image",content="https://monthly-income.herokuapp.com/images/monthly-income.png")
 		meta(name="viewport",content="width=device-width,initial-scale=1.0,user-scalable=no")
 		meta(name="google-site-verification",content="8jtKltD6T2ns2fyRMuP1DEhvMenwOuJUupv0Z-_KqPo")
-		link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet", integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==", crossorigin="anonymous")
-		link(rel='stylesheet',href='/stylesheets/style.css')
 	body
 		nav.navbar.navbar-default.navbar-fixed-top
 				.container-fluid
@@ -38,5 +36,7 @@ html
 					p Grow up fast your monthly income with your <strong>monthly income management</strong>. Manage your expenditures, and remove them from your monthly activities! Follow all advices from our platform for a better result. 
 					p 
 						strong All informations are confidential!
+		link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", async, rel="stylesheet", integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==", crossorigin="anonymous")
+		link(rel='stylesheet',href='/stylesheets/style.css',async)
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js")
 		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==", crossorigin="anonymous")
