--- a/views/index.jade
+++ b/views/index.jade
@@ -32,19 +32,67 @@ html
 		.container
 			block content
 				.well
-					h1 Grow up your monthly income
-					p Grow up fast your monthly income with your <strong>monthly income management</strong>. Manage your expenditures, and remove them from your monthly activities! Follow all advices from our platform for a better result. 
-					p
-						strong All informations are confidential!
+					.col-md-7.col-xs-12.col-lg-8
+						h1 Grow up your monthly income
+						p Grow up fast your monthly income with your <strong>monthly income management</strong>. Manage your expenditures, and remove them from your monthly activities! Follow all advices from our platform for a better result. 
+						p
+							strong All informations are confidential!
+					.col-md-5.col-xs-12.col-lg-4
+						br.visible-xs.visible-sm
+						.panel.panel-primary
+							.panel-heading
+								.panel-title 
+									h2.text-center Get started Now
+							.panel-body
+								form.form-horizontal(method="post")
+									.form-group
+										label.control-label.col-md-3 Username
+										.col-md-9
+											input.form-control(type="text",name="username")
+									.form-group
+										label.control-label.col-md-3 Email
+										.col-md-9
+											input.form-control(type="email",name="email")
+									.form-group
+										label.control-label.col-md-3 Password
+										.col-md-9
+											input.form-control(type="password",name="password")
+									.form-group
+										.col-md-9.col-md-offset-3
+											button.btn.btn-primary(type="submit") Register Now
+					.clearfix
+				script(type="text/javascript",async,src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js",charset="utf-8")
+				script(type="text/javascript",async,src="//yastatic.net/share2/share.js",charset="utf-8")
+				p.text-center Tell your friends about us
+				.ya-share2.text-center(data-services="vkontakte,facebook,gplus,twitter,delicious,digg,pocket,tumblr,viber,whatsapp",data-counter)
+				
+				p.row
+					h2.col-md-12 With us you can:
+					.col-md-6
+						h3 Calculate your monthly/early deposit
+						img.img-responsive(src="/images/deposited.png",alt="monthly deposit")
+						
+					.col-md-6
+						h3 To know your successful Rank
+						img.img-responsive(src="/images/rank.png",alt="successful rank")
+				p.row
+					.col-md-6
+						h3 Create your income list
+						img.img-responsive(src="/images/incomes.png",alt="income list")
+						
+					.col-md-6
+						h3 Create your expediture list
+						img.img-responsive(src="/images/expediture.png",alt="expediture list")
+				
 		link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet", integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==", crossorigin="anonymous")
 		link(rel='stylesheet',href='/stylesheets/style.css')
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js")
 		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==", crossorigin="anonymous")
 		script.
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			// (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			// (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			// m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			// })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 			
-			ga('create', 'UA-59648143-2', 'auto');
-			ga('send', 'pageview');
+			// ga('create', 'UA-59648143-2', 'auto');
+			// ga('send', 'pageview');
