--- a/views/index.jade
+++ b/views/index.jade
@@ -44,7 +44,7 @@ html
 								.panel-title 
 									h2.text-center Get started Now
 							.panel-body
-								form.form-horizontal(method="post")
+								form.form-horizontal(method="post",action="/register")
 									.form-group
 										label.control-label.col-md-3 Username
 										.col-md-9
