--- a/views/index.jade
+++ b/views/index.jade
@@ -67,9 +67,8 @@ html
 				.ya-share2.text-center(data-services="vkontakte,facebook,gplus,twitter,delicious,digg,pocket,tumblr,viber,whatsapp",data-counter)
 				
 				h2 How it works
-				<div class="embed-responsive embed-responsive-4by3">
-					<iframe class="embed-responsive-item" width="854" height="480" src="https://www.youtube.com/embed/F305qZTD-kg" allowfullscreen></iframe>
-				</div>
+				div.embed-responsive.embed-responsive-4by3
+					iframe.embed-responsive-item(width="854" height="480" src="https://www.youtube.com/embed/F305qZTD-kg" allowfullscreen)
 				
 				p.row
 					h2.col-md-12 With us you can:
