--- a/views/index.jade
+++ b/views/index.jade
@@ -66,7 +66,7 @@ html
 				p.text-center Tell your friends about us
 				.ya-share2.text-center(data-services="vkontakte,facebook,gplus,twitter,delicious,digg,pocket,tumblr,viber,whatsapp",data-counter)
 				
-				h2 How it works
+				h2.text-center How it works
 				div.embed-responsive.embed-responsive-4by3
 					iframe.embed-responsive-item(width="854" height="480" src="https://www.youtube.com/embed/F305qZTD-kg" allowfullscreen)
 				
@@ -87,6 +87,9 @@ html
 					.col-md-6
 						h3 Create your expediture list
 						img.img-responsive(src="/images/expediture.png",alt="expediture list")
+						
+					p.text-center If you want, can contribute on
+						a(href="https://github.com/wanoo21/MonthlyIncome") GitHub
 				
 		link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet", integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==", crossorigin="anonymous")
 		link(rel='stylesheet',href='/stylesheets/style.css')
